--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mystery Number</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mystery Number</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <div class="content">
-        
-        <div class="level-buttons">
-            <button class="lvlbtn" id="easy">Easy</button>
-            <button class="lvlbtn" id="medium">Medium</button>
-            <button class="lvlbtn" id="hard">Hard</button>
-        </div>
+  <div class="content">
 
-        <div id="bubbles-container"></div>
-
-        <div id="game" class="game-box">
-            <div>Trouver le numéro mystère (entre 1 et 10)</div>
-        </div>
-
-        <button class="playbtn" id="button">Tester</button>
+    <div class="level-buttons">
+      <button class="lvlbtn" id="easy">Easy</button>
+      <button class="lvlbtn" id="medium">Medium</button>
+      <button class="lvlbtn" id="hard">Hard</button>
     </div>
-    <script src="./script.js" defer></script>
+
+    <div id="bubbles-container"></div>
+
+    <div id="game" class="game-box">
+      Trouve le numéro mystère (entre 1 et 10). Tu as 3 essais.
+    </div>
+
+  </div>
+
+  <script src="./script.js" defer></script>
 </body>
 
 </html>
