--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mystery Number</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jeu du nombre mystère</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <div class="content">
 
-    <div class="level-buttons">
-      <button class="lvlbtn" id="easy">Easy</button>
-      <button class="lvlbtn" id="medium">Medium</button>
-      <button class="lvlbtn" id="hard">Hard</button>
-    </div>
-
-    <div id="bubbles-container"></div>
-
-    <div id="game" class="game-box">
-      Trouve le numéro mystère (entre 1 et 10). Tu as 3 essais.
-    </div>
-
+  <div id="level-buttons">
+    <button id="easy">Facile</button>
+    <button id="medium">Moyen</button>
+    <button id="hard">Difficile</button>
   </div>
 
-  <script src="./script.js" defer></script>
-</body>
+  <div id="game"></div>
+  <div id="bubbles-container"></div>
 
+  <script src="script.js"></script>
+</body>
 </html>
