--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
 </head>
 <body>
 
-  <div id="level-buttons">
+  <div id="container">
+
+    <div id="title"> Mystery Number </div>
+  
+    <div id="game-container">
+  
+    <div id="title-gamebox">
+    <div id="level-buttons">
     <button id="easy">Facile</button>
     <button id="medium">Moyen</button>
     <button id="hard">Difficile</button>
   </div>
 
   <div id="game"></div>
+
+  </div>
   <div id="bubbles-container"></div>
+
+  </div>
+
+</div>
+
+<footer id="footer">
+  <p> Mystery number - Created by Maryam</p>
+</footer>
 
   <script src="script.js"></script>
 </body>
